apps/web-giddh/src/assets/css/style-2.scss
/* ... */
.HW_badge {
    background: $red;
    width: 14px !important;
    height: 14px !important;
    line-height: 14px !important;
}
.HW_badge.HW_softHidden {
    display: none !important;
}
span#HW_badge_cont:nth-child(3) {
    display: none;
}
/*notofication css end*/

.setting-data,
.setting-sidebar-open .white-row {
    padding-left: 15px !important;
}

.setting-sidebar-open .menu_open .setting-data,
.setting-sidebar-open .menu_open .white-row {
    padding-left: 15px !important;
}

.date-field {
    flex-direction: column;
}

.mobile-home {
    background-color: $lavender;
    .fixed-padding,
    .padding-top-fixed,
    .desktop-header {
        display: none;
    }
    #content-wrapper {
        background-color: $lavender;
    }
}

.icon-home-icon {
    color: $white;
}
.remove-header-lower-layer {
    .container-fluid.mr-b1 {
        margin-bottom: 0;
        .lower-layer-header {
            display: none !important;
        }
        .upper-layer-header {
            padding-top: 10px;
            padding-bottom: 5px;
        }
    }
    .fixed-padding {
        padding-top: 50px;
    }
}
.mobile-sidebar-open:after {
    position: absolute;
    content: "";
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    z-index: 9;
}
.HW_badge.HW_softHidden {
    display: none !important;
}
span#HW_badge_cont:nth-child(3) {
    display: none !important;
}
.giddh-datepicker {
    cursor: pointer !important;
}
.setting-items {
    ul {
        li {
            a {
                span {
                    i {
                        color: $gray;
                        margin-right: 10px;
                        font-size: 17px;
                    }
                }
            }
        }
    }
}

.debtor-details-form {
    .form-fields {
        .single-field {
            sh-select {
                .header {
                    input.form-control {
                        background-color: $white !important;
                        height: 28px !important;
                        padding-right: 15px !important;
                    }
                }
            }
        }
    }
}

.on-setting-page .nav-left-bar.open,
.on-user-page .nav-left-bar.open on-user-page {
    left: 0 !important;
    display: block !important;
}
.setting-sidebar-open .nav-left-bar,
.on-user-page .nav-left-bar,
.on-setting-page .nav-left-bar {
    display: block;
}
.menu_open aside-setting.setting-sidebar {
    right: 0 !important;
}
.on-setting-page aside-setting.setting-sidebar,
.on-user-page aside-setting.setting-sidebar {
   // left: -250px;
}
.setting-sidebar-open #content-wrapper.menu_open {
    padding-right: 240px;
    padding-left: 60px !important;
}

.setting-sidebar-open .desktop-header {
    padding-left: 0;
}
.setting-sidebar-open .desktop-header.menu_open {
    padding-right: 240px !important;
}
.gst-sidebar-open .menu_open {
    padding-left: 300px !important;
}
.desktop-header.menu_open {
    padding-left: 60px !important;
}
/*flex css start*/
.flex-column {
    flex-direction: column;
}
/*flex css start*/
.select-border-bottom {
    .form-control {
        border: none;
        border-bottom: 1px solid $gainsboro;
        width: 100%;
    }
}
.preview-lightbox-overlay {
    z-index: 999 !important;
}
.preview-lightbox {
    img {
        width: 100%;
    }
    .close {
        width: 30px;
        height: 30px;
        opacity: 1;
    }
    .moday-body {
        padding: 30px 15px;
    }
    .header-close-btn {
        display: flex;
        align-items: flex-end;
        justify-content: flex-end;
    }
}
.estimation-date-modal {
    z-index: 99999;
}
.giddh-datepicker-modal {
    z-index: 99999;
}
.purchase-record-confirmation-modal {
    .modal-content {
        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
    }
}
.dropdown-toggle::after {
    display: none;
}
.page-count .pagination {
    justify-content: center;
    margin-top: 15px;
}
.dashboard-container {
    .card {
        margin-bottom: 20px;
        min-height: 426px;
    }
}
.daterangepicker td,
.daterangepicker th {
    font-weight: 400;
    font-size: 14px;
    padding: 4px;
}
.open > .dropdown-menu {
    display: block;
}
.daterangepicker.dropdown-menu {
    box-shadow: 0 3px 28px 0 rgba(0, 0, 0, 0.14);
    color: $dim-gray;
    border: 1px solid $gainsboro;
    z-index: 9999 !important;
}
.manage-group-account-form .button-group .btn {
    margin-right: 15px;
}
.inventory-page {
    .daterangepicker {
        z-index: 9992 !important;
    }
}
.new-ledger-text-right ul li {
    ul {
        li {
            display: flex;
            align-items: center;
        }
    }
}
.total-col bs-tooltip-container.tooltip .tooltip-inner {
    min-width: 150px !important;
    width: 150px !important;
    max-width: 150px !important;
}
.recurring-form {
    sh-select,
    input {
        min-width: 170px;
        max-width: 170px;
    }
}
.daterangepicker {
    z-index: 9992 !important;
}
.sub-branch-option .bs-tooltip-top {
    left: -25px !important;
}
.switch-branch-wrapper .branch-icon-tooltip .bs-tooltip-top {
    left: 8px !important;
    right: 8px !important;
}
.sub-branch-option .bs-tooltip-top .arrow::before {
    right: -22px;
}
#rcw-p91-widget-button {
    z-index: 992;
}

.linked-add {
    .popover {
        width: 268px;
        font-family: inherit;
        border-radius: 4px;
        box-shadow: 0 3px 6px $black-russian;
        top: 20% !important;
        .popover-arrow {
            display: none;
        }
        .popover-header {
            padding: 15px 15px 0 15px;
            margin-bottom: 0;
            font-size: 14px;
            background-color: transparent;
            border-bottom: none;
            font-family: "opensans-semibold";
        }
        .popover-body {
            padding: 0 15px 15px 15px;
        }
    }
    &.create .popover {
        .popover-body {
            padding: 8px 15px;
        }
    }
}
/* ... */

